needed to fix text align center in portfolio wrapper for source.php

--- a/css/source.css
+++ b/css/source.css
@@ -27,6 +27,7 @@ label {
 .portfolio-wrapper {
 	background: #efefd0;
 	color: #800020;
+	text-align: left;
 }
 
 .nav-trigger-container {
